criado os endpoints necessários com a documentação de cada um, criado o evento que irá notificar o adminisrtador quando houver falha na importação para isso foi criada um campo no usuário admin, para indicar que é um administrador
